--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
                         <option id="slc_ligt" class="trans" value="10"></option>
                         <option id="slc_ligs" class="trans" value="11"></option>
                     </select>
-                    <label class="trans" for="inp_texBld" id="inp_texBld_lbl"></label> <p class="txt_dsc"><a id="inp_texBld_dsc" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-light" target="_blank" href="https://github.com/PhilJbt/FiliPDF/blob/main/docs/options/options.md"></a></p>
+                    <label class="trans" for="inp_texBld" id="inp_texBld_lbl"></label><p class="txt_dsc"><a id="inp_texBld_dsc" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-light" target="_blank" href="https://github.com/PhilJbt/FiliPDF/blob/main/docs/options/blendmode.md"></a></p>
                 </div>
                 
                 <div>
                     <input class="form-control" class="lbl_cnt" type="range" id="inp_texOpa" min="0" max="1" step="0.1" value="0.3" />
-                    <label class="trans lbl_cnt mb-5" for="inp_texOpa" id="inp_texOpa_lbl" data-content=""></label>
+                    <label class="trans lbl_cnt mb-5" for="inp_texOpa" id="inp_texOpa_lbl" data-content=""></label><p class="txt_dsc"><a id="inp_texBld_dsc" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-light" target="_blank" href="https://github.com/PhilJbt/FiliPDF/blob/main/docs/options/opacity.md"></a></p>
                 </div>
 
             </div>
