--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="res/dep/pdfjs/pdf.js"></script>
     <link href="res/dep/bootstrap/bootstrap.min.css" rel="stylesheet">
     <script src="res/dep/bootstrap/bootstrap.bundle.min.js"></script>
+    <link href="res/dep/bootstrap-icons/bootstrap-icons.min.css" rel="stylesheet">
     <script src="res/scripts.js"></script>
 </head>
 <body>
@@ -18,7 +19,7 @@
             FiliPDF
         </span>
         <span class="navbar-text mx-3">
-            <span class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover">&copy; <p id="yearNow" style="display:inline;">2023</p> - Philippe Jaubert</span>
+            <span class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover"><a class="lnk_github" href="https://github.com/PhilJbt/FiliPDF" target="_blank"><i class="bi bi-github"></i></a></span>
         </span>
     </div>
 </nav>
