--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>FiliPDF</title>
     <link rel="icon" type="image/png" href="res/img/favicon.png" />
     <link href="res/styles.css" rel="stylesheet">
+    <script type="text/javascript" src="res/font/font.js"></script>
+    <script type="text/javascript" src="res/dep/fontkit/fontkit.umd.min.js"></script>
     <script type="text/javascript" src="res/dep/pdf-lib/pdf-lib.min.js"></script>
     <script type="text/javascript" src="res/dep/pdfjs/pdf.js"></script>
     <link href="res/dep/bootstrap/bootstrap.min.css" rel="stylesheet">
@@ -41,16 +43,16 @@
                         <input class="form-control" type="file" id="inp_filPck" name="inp_filPck" accept=".pdf"/>
                         <label class="trans-txc" for="inp_filPck" id="inp_filPck_lbl"></label>
                     </div>
-                    <!-- Text 1 -->
+                    <!-- Text lines -->
                     <div class="form-floating mb-1">
-                        <input type="text" class="form-control" id="inp_texRec" placeholder="" />
-                        <label class="trans-txc" for="inp_texRec" id="inp_texRec_lbl" data-content=""></label>
+                        <textarea class="form-control" id="inp_txtLin" style="height: 100px" placeholder=""></textarea>
+                        <label class="trans-txc" for="inp_txtLin" id="inp_txtLin_lbl" data-content=""></label>
+                        <p id="inp_txtLin_dsc" class="txt_dsc trans-inh link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-light"></p>
                     </div>
-                    <!-- Text 2 -->
-                    <div class="form-floating mb-1">
-                        <input type="text" class="form-control" id="inp_texSbj" placeholder="" />
-                        <label class="trans-txc" for="inp_texSbj" id="inp_texSbj_lbl" data-content=""></label>
-                        <p id="inp_texSbj_dsc" class="txt_dsc trans-inh link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-light"></p>
+                    <!-- Date -->
+                    <div>
+                        <input class="form-control" class="lbl_cnt" type="date" id="inp_date" />
+                        <label class="trans-txc" for="inp_date" id="inp_date_lbl" data-content=""></label>
                     </div>
                     <!-- Font size -->
                     <div>
@@ -67,11 +69,6 @@
                         <input class="form-control" class="lbl_cnt" type="range" id="inp_imgQly" min="1" max="5" step="1" value="2" />
                         <label class="trans-txc lbl_cnt" for="inp_imgQly" id="inp_imgQly_lbl" data-content=""></label>
                     </div>
-                    <!-- Date -->
-                    <div>
-                        <input class="form-control" class="lbl_cnt" type="date" id="inp_date" />
-                        <label class="trans-txc" for="inp_date" id="inp_date_lbl" data-content=""></label>
-                    </div>
                     <!-- Preview / Save -->
                     <div class="btn-group btn-group-lg flex-row justify-content-center mt-5" role="group">
                         <button type="button" onclick="processing(true)" id="inp_prvw" class="btn btn-primary trans-dat trans-txc" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="" disabled></button>
@@ -82,8 +79,7 @@
                         <div class="progress" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="height: 30px">
                             <div class="progress-bar" id="bar_progress" style="width: 0%">0%</div>
                         </div>
-                        <div class="alert alert-info trans-inh" id="alrt_xprt" role="alert"></div>
-                        <div class="alert alert-danger trans-inh" id="err_xprt" role="alert"></div>
+                        <div class="alert" id="alert_message" role="alert"></div>
                     </div>
                     <!-- Presets -->
                     <div class="btn-group flex-row justify-content-center mt-5 mb-2">
