--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
                     <div class="btn-group flex-row justify-content-center mt-5 mb-2">
                         <div class="input-group">
                             <div class="input-group-text trans-txc" id="btn_presets"></div>
-                            <button type="button" class="btn btn-outline-secondary trans-dat" onclick="setPreset(1)" id="prset1" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="">1</button>
-                            <button type="button" class="btn btn-outline-secondary trans-dat" onclick="setPreset(2)" id="prset2" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="">2</button>
-                            <button type="button" class="btn btn-outline-secondary trans-dat" onclick="setPreset(3)" id="prset3" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="">3</button>
-                            <button type="button" class="btn btn-outline-secondary trans-dat" onclick="setPreset(4)" id="prset4" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="">4</button>
-                            <button type="button" class="btn btn-outline-secondary trans-dat" onclick="setPreset(5)" id="prset5" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="">5</button>
+                            <button type="button" class="btn btn-outline-secondary trans-dat" onclick="setOptionsPreset(1)" id="prset1" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="">1</button>
+                            <button type="button" class="btn btn-outline-secondary trans-dat" onclick="setOptionsPreset(2)" id="prset2" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="">2</button>
+                            <button type="button" class="btn btn-outline-secondary trans-dat" onclick="setOptionsPreset(3)" id="prset3" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="">3</button>
+                            <button type="button" class="btn btn-outline-secondary trans-dat" onclick="setOptionsPreset(4)" id="prset4" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="">4</button>
+                            <button type="button" class="btn btn-outline-secondary trans-dat" onclick="setOptionsPreset(5)" id="prset5" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="">5</button>
                         </div>
                     </div>
                     <!-- Text color -->
