new generic preset

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                     <div class="btn-group flex-row justify-content-center mt-5 mb-2">
                         <div class="input-group">
                             <div class="input-group-text trans-txc" id="btn_presets"></div>
+                            <button type="button" class="btn btn-outline-secondary trans-dat trans-txc" onclick="setOptionsPreset(0)" id="prset0" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title=""></button>
                             <button type="button" class="btn btn-outline-secondary trans-dat" onclick="setOptionsPreset(1)" id="prset1" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="">1</button>
                             <button type="button" class="btn btn-outline-secondary trans-dat" onclick="setOptionsPreset(2)" id="prset2" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="">2</button>
                             <button type="button" class="btn btn-outline-secondary trans-dat" onclick="setOptionsPreset(3)" id="prset3" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="">3</button>
