--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="res/font/font.js"></script>
     <script type="text/javascript" src="res/dep/fontkit/fontkit.umd.min.js"></script>
     <script type="text/javascript" src="res/dep/pdf-lib/pdf-lib.min.js"></script>
-    <script type="text/javascript" src="res/dep/pdfjs/pdf.js"></script>
+    <script type="module" src="res/dep/pdfjs/pdf.mjs"></script>
     <link href="res/dep/bootstrap/bootstrap.min.css" rel="stylesheet">
     <script src="res/dep/jquery/jquery.slim.min.js"></script>
     <script src="res/dep/bootstrap/bootstrap.bundle.min.js"></script>
